--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prettier": "^2.2.1",
     "sanitize.css": "^12.0.1",
     "sass": "^1.32.12",
+    "sass-loader": "10.1.1",
     "typescript": "^4.2.4"
   }
 }
