--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
+    "@storybook/addon-storyshots": "^6.2.9",
     "@storybook/react": "^6.2.9",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
@@ -39,6 +40,7 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1",
+    "react-test-renderer": "^17.0.2",
     "sanitize.css": "^12.0.1",
     "sass": "^1.32.12",
     "sass-loader": "10.1.1",
