--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@storybook/addon-links": "^6.2.9",
     "@storybook/addon-storyshots": "^6.2.9",
     "@storybook/react": "^6.2.9",
+    "@types/jest": "^26.0.23",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.3",
@@ -34,11 +35,15 @@
     "@types/redux-logger": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
+    "babel-jest": "^27.0.1",
     "babel-loader": "^8.2.2",
+    "babel-preset-react-app": "^10.0.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^27.0.1",
+    "jest-watch-typeahead": "^0.6.4",
     "prettier": "^2.2.1",
     "react-test-renderer": "^17.0.2",
     "sanitize.css": "^12.0.1",
