--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,12 @@
     "jsx": "preserve",
     "baseUrl": "src"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/**/*"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/**/*",
+    "jest.config.js"
+  ],
   "exclude": ["node_modules"]
 }
